--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>replit</title>
+  <title>World Editor</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -13,12 +13,36 @@
   <canvas id="canvas"></canvas>
   <div id="controls">
      <button onclick="addRandomPoint()">Add Point</button>
+     <button onclick="addRandomSegment()">Add Segment</button>
+     <button onclick="removeRandomSegment()">Remove Segment</button>
   </div>
 
   <script src="graph.js"></script>
   <script src="primitives/point.js"></script>
   <script src="primitives/segment.js"></script>
   <script>
+
+    function removeRandomSegment() {
+        if(graph.segments.length == 0) {
+           console.log("no segments");
+           return;
+        }
+        const index = Math.floor(Math.random() * graph.segments.length);
+        graph.removeSegment(graph.segments[index]);
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        graph.draw(ctx);
+    }
+
+     function addRandomSegment() {
+       const index1 = Math.floor(Math.random() * graph.points.length);
+       const index2 = Math.floor(Math.random() * graph.points.length);
+       const success = graph.tryAddSegment(
+             new Segment(graph.points[index1], graph.points[index2])
+          );
+       ctx.clearRect(0, 0, canvas.width, canvas.height);
+       graph.draw(ctx);
+       console.log(success);
+     }
 
       function addRandomPoint() {
          const success = graph.tryAddPoint(
