--- a/index.html
+++ b/index.html
@@ -12,52 +12,17 @@
   <h1>World Editor</h1>
   <canvas id="canvas"></canvas>
   <div id="controls">
-     <button onclick="addRandomPoint()">Add Point</button>
-     <button onclick="addRandomSegment()">Add Segment</button>
-     <button onclick="removeRandomSegment()">Remove Segment</button>
-  </div>
+    
 
+  </div>
+  
+  <script src="graphEditor.js"></script>
+  <script src="utils.js"></script>
+  <script src="graphEditor.js"></script>
   <script src="graph.js"></script>
   <script src="primitives/point.js"></script>
   <script src="primitives/segment.js"></script>
   <script>
-
-    function removeRandomSegment() {
-        if(graph.segments.length == 0) {
-           console.log("no segments");
-           return;
-        }
-        const index = Math.floor(Math.random() * graph.segments.length);
-        graph.removeSegment(graph.segments[index]);
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        graph.draw(ctx);
-    }
-
-     function addRandomSegment() {
-       const index1 = Math.floor(Math.random() * graph.points.length);
-       const index2 = Math.floor(Math.random() * graph.points.length);
-       const success = graph.tryAddSegment(
-             new Segment(graph.points[index1], graph.points[index2])
-          );
-       ctx.clearRect(0, 0, canvas.width, canvas.height);
-       graph.draw(ctx);
-       console.log(success);
-     }
-
-      function addRandomPoint() {
-         const success = graph.tryAddPoint(
-            new Point(
-              Math.random() * canvas.width, 
-              Math.random() * canvas.height
-            )
-         );
-
-         ctx.clearRect(0, 0, canvas.width, canvas.height);
-         graph.draw(ctx);
-         console.log(success);
-      }
-
-    
      canvas.width = 600;
      canvas.height = 600;
 
@@ -74,7 +39,17 @@
       const s4 = new Segment(p2, p3);
 
       const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
-      graph.draw(ctx);
+      const graphEditor = new GraphEditor(canvas, graph);
+
+      animate();
+
+      function animate() {
+         ctx.clearRect(0, 0, canvas.width, canvas.height);
+         graphEditor.display();
+         requestAnimationFrame(animate);
+      }
+
+
 
   </script>
 
@@ -87,7 +62,7 @@
   page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
   teal, blue, blurple, magenta, pink!
   -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="blue" position="bottom-right"></script>
 </body>
 
 </html>
