Added zoom and drag

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   
   <script src="graphEditor.js"></script>
   <script src="utils.js"></script>
+  <script src="viewport.js"></script>
   <script src="graphEditor.js"></script>
   <script src="graph.js"></script>
   <script src="primitives/point.js"></script>
@@ -39,13 +40,17 @@
       const s4 = new Segment(p2, p3);
 
       const graph = new Graph([p1, p2, p3, p4], [s1, s2, s3, s4]);
-      const graphEditor = new GraphEditor(canvas, graph);
+      const viewport = new Viewport(canvas);
+      const graphEditor = new GraphEditor(viewport, graph);
 
       animate();
 
       function animate() {
          ctx.clearRect(0, 0, canvas.width, canvas.height);
+         ctx.save();
+         ctx.scale(1 / viewport.zoom, 1 / viewport.zoom);
          graphEditor.display();
+         ctx.restore();
          requestAnimationFrame(animate);
       }
 
