--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
          world.generate();
          world.draw(ctx);
          graphEditor.display();
-         new Envelope(graph.segments[0], 200, 20).draw(ctx);
+         new Envelope(graph.segments[0], 80).draw(ctx); // 200, 20
          requestAnimationFrame(animate);
       }
 
